# mallard

./: .dir-locals.el  CMakeLists.txt  compile  format  run
src/: Camera.cpp  Camera.h  Cube.h  Ground.cpp  Ground.h  Input.cpp  Input.h  Main.cpp  Scene.h
src/Debug/: Debug.cpp  Debug.h  Text.cpp  Text.h
